[metadata]
name = yaycl
author = Sean myers
author-email = semyers@redhat.com
summary = YAML Config Autoloader
description-file = README.md
license = MIT
home-page = https://github.com/seandst/yaycl
requires-python = >=2.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages = yaycl

[entry_points]
yaycl.load_yaml =
    default = yaycl:load_yaml

[bdist_wheel]
python-tag = py27
